<resources>
    <string name="app_name">Learning</string>
    <string name="facebook_application_id" translatable="false">532471986958225</string>
    <string name="google_client_id">119073065153-l6em9bmo4him895i5lffrsj7mreles7d.apps.googleusercontent.com</string>
    <string name="authentication">AUTHENTICATION</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed Out</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="loading">Loading...</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="hint_email">Enter Email Id</string>
    <string name="hint_password">Enter password</string>.


    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="skip_now">Skip Now</string>
    <string name="logout">Logout</string>

</resources>
